[B] Fix Collecting.Toggle z-index

--- a/client/src/theme/styles/base/_z-stack.scss
+++ b/client/src/theme/styles/base/_z-stack.scss
@@ -23,7 +23,7 @@
   }
 }
 
-.dialog-primary, .range-picker__dialog {
+.dialog-wrapper, .range-picker__dialog {
   z-index: 600;
 }
 
